--- a/src/Components/Topbar/Topbar.css
+++ b/src/Components/Topbar/Topbar.css
@@ -5,7 +5,7 @@
   width: 100%;
   display: flex;
   flex-direction: Row;
-  margin-top: 30px;
+  
   border-radius:'20px';
   margin-top: 50px;
 }
@@ -60,11 +60,11 @@
     .Topbar{
       flex-direction: column;
       width: 500px;
-      height: 500px;
+      height: 800px;
     }
     .CW2{
-        width:300px;
-        height:200px;
+        width:100%;
+        height:20%;
     }
     .CW1{
       
