--- a/src/Components/Content/content.css
+++ b/src/Components/Content/content.css
@@ -39,6 +39,60 @@ font-family: Segoe UI;
 font-weight: 400;
 word-wrap: break-word
 }
+.HR{
+  width: 540px;
+   height: 1; 
+   border: 1px dashed white;
+}
+.CPT1{
+  width: 500px;
+   height: 25px;
+    justify-Content: flex-start;
+    align-Items: center; gap: 190px;
+     display: inline-flex;
+
+}
+.CPT2{
+  width: 500px;
+   height: 25px;
+    justify-Content: flex-start;
+    align-Items: center; gap: 173px;
+     display: inline-flex;
+
+}
+.CPT3{
+  width: 500px;
+   height: 25px;
+    justify-Content: flex-start;
+    align-Items: center; gap: 268px;
+     display: inline-flex;
+
+     
+}
+.CPT4{
+  width: 500px;
+   height: 25px;
+    justify-Content: flex-start;
+    align-Items: center; gap: 125px;
+     display: inline-flex;
+
+}
+.CPT5{
+  width: 500px;
+   height: 25px;
+    justify-Content: flex-start;
+    align-Items: center; gap: 240px;
+     display: inline-flex;
+
+}
+.CPT6{
+  width: 500px;
+   height: 25px;
+    justify-Content: flex-start;
+    align-Items: center;  gap: 130px;
+     display: inline-flex;
+
+}
 
 
 @media screen and (max-width: 768px) {
@@ -59,5 +113,61 @@ word-wrap: break-word
     width: 600px;
     height: 650px;
     margin-left: 10%;
+  }
+} 
+
+@media screen and (max-width: 480px) {
+  .CT{
+    font-size: 26px;
+    width: 400px;
+    margin-left: 16%;
+  }
+  .CP{
+    font-size: 12px;
+    width: 300px;
+    
+  }
+  .CTT{
+    
+    height: 70% ;
+    font-size:7px;
+    margin-left: 14%;
+  }
+  .content{
+    width: 400px;
+    height: 650px;
+    margin-left: 1%;
+    
+  }
+  .HR{
+    width: 350px;
+  }
+  .CPT1{
+    width:400px;
+    gap:68px;
+  }
+
+  .CPT2{
+    width:400px;
+    gap:50px;
+  }
+  .CPT3{
+    width:400px;
+    gap:145px;
+  }
+  .CPT4{
+    width:400px;
+    gap:3px;
+  }
+  .CPT5{
+    width:400px;
+    gap:115px;
+  }
+  .CPT6{
+    width:400px;
+    gap:7px;
+  }
+  .Butt1{
+    margin-right: 12%;
   }
 } 
