--- a/src/App.css
+++ b/src/App.css
@@ -30,7 +30,7 @@
     flex-direction: column;
   }
   .body{
-    width: 100%;
+    width: 780px;
     height: auto;
     justify-content: center;
   }
